Sex Theorie-Interaktion finished

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -25,7 +25,8 @@ Durch die frühe Interaktion mit einer Bezugsperson wird auch die interaktionell
 
 Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontingenz} genannt. Gemeint ist dabei die regelhafte Aufeinanderfolge einzelnen Verhaltensschritte. Die Wichtigkeit kontingenter Beantwortung kindlicher Signale, vor allem in der Anfangsphase der Eltern-Kind-Beziehung, betont \citeA{Papousek1987, Papousek1989}. Kontingenz bedeutet dabei die zeitliche und inhaltliche Passung der elterlichen Reaktion auf das Verhalten des Kindes, also die zeitliche Folge der Reaktion und die inhaltliche Entsprechung. Diese frühe Verständigung zwischen Eltern und Kind würde nicht gelingen, wenn die Eltern nicht kompensatorisch an die begrenzte kindlichen Voraussetzungen anpassen würden. Diese Fähigkeit schafft die Voraussetzung für eine gelingende Kommunikation mit dem Säugling im vorsprachlichen Alter. Kontingentes Antworten von Seiten der Eltern ermöglicht eine Kohärenz der Interaktion, die zum subjektiven Gefühl der Kontrolle beim Kind führt.
 
-TBD: Erziehungsstile der Eltern
+\textit{Erziehungsstile} sind Verhaltensweisen und Einstellungen, die das emotionale Klima für die Eltern-Kind-Interaktion bestimmen \cite[S.~649]{Siegler2008}. Um den Einfluss den Eltern auf die Entwicklung von Kindern nehmen können, wurden zwei Dimensionen des Erziehungsstils identifiziert: (1) das Ausmass an elterlichen Wärme, Unterstützung und Akzeptanz, und (2) das Ausmass an elterlicher Kontrolle und Anforderung \cite{Maccoby1983}. Diese Aspekte der der elterlichen Erziehung scheinen eine wichtige Rolle bei der Ausbildung interindividueller Unterschiede zwischen Kindern zu spielen. \citeA{Baumrind1973} entwickelte anhand der Dimensionen Unterstützung und Kontrolle vier Erziehungsstile: autoritativ, autoritär, permissiv und vernachlässigend-zurückweisend \cite{Baumrind1991}. Nach dieser Typologie neigen \textbf{autoritative} Eltern dazu Anforderungen zu stellen, aber auch auf das Kind einzugehen und warmherzig zu sein. Gemäss \citeA{Baumrind1991} sind Kinder autoritativer Eltern häufig kompetent, selbstbewusst und bei ihren Altersgenossen beliebt. Als Jugendliche besitzen sie häufig hohe soziale und schulische Fähigkeiten, Selbstvertrauen und positive Verhaltensweisen \cite{Lamborn1991}. \textbf{Autoritäre} Eltern sind oft kalt und reagieren nicht auf die Bedürfnisse ihrer Kinder. Des Weiteren üben sie starke Kontrolle aus und stellen hohe Anforderungen. Forderungen an die Kinder erzwingen sie oft durch Ausüben ihrer elterlichen Macht. Kinder autoritärer Eltern besitzen oft relativ geringe soziale und schilische Kompetenzen, sind unglücklich und unfreundlich und besitzen ein geringes Selbstvertrauen. Im Jugendalter wirkt sich dies auf eine geringere soziale und schulische Kompetenz im Vergleich zu Kindern autoritätiver Eltern aus \cite{Baumrind1991, Lamborn1991}.  \textbf{Permissive} Eltern reagieren auf die Bedürfnisse und Wünsche ihrer Kinder und sind nachsichtig. Sie sind nicht konservativ und verlangen von ihren Kindern nicht sich selbst zu regulieren. Kinder permissiver Eltern sind häufig impulsiv, es fehlt ihnen an Slebstbeherrschung und zeigen oft schawache schulische Leistungen \cite{Baumrind1991}. Als Jugendliche fallen sie durch häufigen Drogenkonsum und schlechtes Benehmen gegenüber Kindern autoritativer Eltern auf \cite{Lamborn1991}. \textbf{Zurückweisend-vernachlässigende} Eltern sind uninteressierte Eltern, die wenig Anforderungen stellen und auch wenig auf sie reagieren. Sie setzen dem Verhalten der Kinder keine Grenzen und kontrollieren es auch nicht. Säuglinge und Kleinkinder zurückweisend-vernachlässigender Eltern weisen häufig gestörte Bindungsbeziehungen und Probleme in der Beziehungsgestaltung zu ihren Altersgenossen auf \cite{Parke1998}.
+
 
 \subsubsection{Entwicklungsaufgaben der Kinder}\label{sec:Entwicklungsaufgaben}
 
