Sec. Entwicklungsaufgaben der Kinder started

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -2,6 +2,8 @@
 \subsection{\textit{WiP:} Theoretische Überlegungen anhand der Eltern-Kind-Beziehung}\label{sec:TheretischeÜberlegungen}
 Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{ElternKindBeziehung1999}. Ursprünglich als Mutter-Kind-Beziehung, wurde dies aufgrund wissenschaftlicher Ergebnisse zum Begriff Eltern-Kind-Beziehung erweitert, da auch ein konstanter, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppe aufbauen. Dabei muss die Gelegenheit zu regelmässigen Zwiegesprächen gegeben sein, wodurch durch die Anwesenheit und Zuspruch der vertraut gewordenen Menschen die innere Sicherheit, Geborgenheit und Angstfreiheit beim Kind. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{ElternKindBeziehung1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmale unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern bezieht. Wo sich hingegen die Strukturmerkmale auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kinder bezieht. Die Qualität der Beziehung kann einerseit unter der systemischen Perspektive betrachtet werden, in dem der Familienprozess als das Ergebnis wechselseiteiger Beeinflussung aller Familienmitgliederbetrachtet wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Weiter kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung und deren erziehungsstile gesetzt wird. 
 
+Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundlegenden Umstrukturierung einer Zweier- zu einer Dreierbeziehung \cite{Hofer1992, Buergin1998}. Dies gelte als eine zentrale Entwicklungsaufgabe von Familien, wobei die Eltern-Kind-Beziehung nicht als einseitige Einflussnahme zu verstehen ist, sondern die Eltern und die Kinder stehen in einer reziproken sozialisatorischen Beziehung zueinander. \citeA{Hofer1992} nennt wichtige Einflussgrössen der dyadischen Beziehung zwischen Vater, Mutter und Kind, die sich auf die kindliche Entwicklung auswirken können: Dabei wird die Synchronizität der Interaktion, die Persönlichkeit der Eltern, die Beziehungsqualität der Partner, sowie die affektive und kognitive Ausstattung des Kindes selbst genannt. 
+
 \begin{figure}%[htbp] -> am Schluss fürs Feintuning :-)
   \centering
      \includegraphics[width=1.0\textwidth]{content/Grafik/Infografik_ElternKindBeziehung_Uebersicht.png}
@@ -13,22 +15,22 @@ Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig binde
 \subsubsection{Eltern-Kind-Interaktion}\label{sec:Interaktion}
 Grundsätzlich ist der Mensch gemäss \citeA[S.~91]{Resch1999} in ein Gefüge von zwischenmenschlichen Relationen eingebettet, welche einen wesentlichen Einfluss auf das innerer Weltverständnis und das Selbstbild nehmen.  Die frühe Kindheit stellt eine kritische Periode in der Entwicklung dar, wobei die wichtigste frühe Umgebung des Kindes die Familie, resp. das primäre Umfeld, ist (vgl. ebd., S. 92ff.). Wird die Familie im Entwicklungskontext angeschaut, so kann der elterliche Einfluss auf das Kind durch die zwei Begriffe \textit{Beziehung} und \textit{Erziehung} definiert werden. Dadurch weist die Eltern-Kind-Beziehung immer Beziehungsqualitäten und Erziehungsqualitäten auf.  
 
-Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundlegenden Umstrukturierung einer Zweier- zu einer Dreierbeziehung \cite{Hofer1992, Buergin1998}. Dies gelte als eine zentrale Entwicklungsaufgabe von Familien, wobei die Eltern-Kind-Beziehung nicht als einseitige Einflussnahme zu verstehen ist, sondern die Eltern und die Kinder stehen in einer reziproken sozialisatorischen Beziehung zueinander. \citeA{Hofer1992} nennt wichtige Einflussgrössen der dyadischen Beziehung zwischen Vater, Mutter und Kind, die sich auf die kindliche Entwicklung auswirken können: Dabei wird die Synchronizität der Interaktion, die Persönlichkeit der Eltern, die Beziehungsqualität der Partner, sowie die affektive und kognitive Ausstattung des Kindes selbst genannt. 
-
-Auch kindliche Faktoren beeinflussen die frühen Interaktionen deutlich. Das Kind ist schon sehr früh in der Lage, selektiv und adäquat auf die emotionale Ausdrucksform der Bezugsperson einzugehen \cite{Harris1994}. Dabei haben Kinder im Säuglingsalter von der Bezugsperson die Erwartung, dass diese adäquat auf die Gefühlsausdrücke reagiert. Dies ermöglicht bereits dem Säugling einen Informationsaustausch zu seiner Bezugsperson. Somit ist ein Säugling in der Lage, sich anhand dem emotionalen Ausdruck der Bezugsperson anzunähern oder es bleiben zu lassen \cite{Resch1999}. Dieser Vorgang wird als \textit{soziale Vergewisserung (engl. social referencing)} bezeichnet und meint damit, dass ein Kind nach der Beantwortung seiner affektiven Gestimmtheit sucht, wenn es sich seiner Bezugsperson zuwendet. Es konsultiert den Gesichtsausdruck der Bezugsperson, um über die Bedeutung eines ihm unbekannten Ereignisses eine Sinnszuschreibung \textit{(engl. meaning attribution)} zu erhalten. Diese frühen affektiven Regulatoren der Interaktion dienen der Entwicklung des kindlichen Interessens und des kindlichen Bewertungsschemas. Je nach emotionalem Ausutausch wird das Kind eine Kohärenz in seinen Erwartungen entwickeln oder nicht. Wenn die kindlichen emotionalen Signale adäquat beantwortet werden, entsteht eine günstige Basis des Erfahrungslernens \cite[S.~95]{Resch1999}. Die emotionale Kommunikation konstituiert das kindliche Weltbild in Form von Selbst- und Objektrepräsentanzen. Inkonsistente emotionale Kommunikation führt zu einem weniger köhärenten und weniger vorhersagbaren inneren Schemata der Welt. 
+Auch \textit{kindliche Faktoren} beeinflussen die frühen Interaktionen deutlich. Das Kind ist schon sehr früh in der Lage, selektiv und adäquat auf die emotionale Ausdrucksform der Bezugsperson einzugehen \cite{Harris1994}. Dabei haben Kinder im Säuglingsalter von der Bezugsperson die Erwartung, dass diese adäquat auf die Gefühlsausdrücke reagiert. Dies ermöglicht bereits dem Säugling einen Informationsaustausch zu seiner Bezugsperson. Somit ist ein Säugling in der Lage, sich anhand dem emotionalen Ausdruck der Bezugsperson anzunähern oder es bleiben zu lassen \cite{Resch1999}. Dieser Vorgang wird als \textit{soziale Vergewisserung (engl. social referencing)} bezeichnet und meint damit, dass ein Kind nach der Beantwortung seiner affektiven Gestimmtheit sucht, wenn es sich seiner Bezugsperson zuwendet. Es konsultiert den Gesichtsausdruck der Bezugsperson, um über die Bedeutung eines ihm unbekannten Ereignisses eine Sinnszuschreibung \textit{(engl. meaning attribution)} zu erhalten. Diese frühen affektiven Regulatoren der Interaktion dienen der Entwicklung des kindlichen Interessens und des kindlichen Bewertungsschemas. Je nach emotionalem Ausutausch wird das Kind eine Kohärenz in seinen Erwartungen entwickeln oder nicht. Wenn die kindlichen emotionalen Signale adäquat beantwortet werden, entsteht eine günstige Basis des Erfahrungslernens \cite[S.~95]{Resch1999}. Die emotionale Kommunikation konstituiert das kindliche Weltbild in Form von Selbst- und Objektrepräsentanzen. Inkonsistente emotionale Kommunikation führt zu einem weniger köhärenten und weniger vorhersagbaren inneren Schemata der Welt. 
 
 Ein weiterer Interaktionsfaktor stellt die \textit{Induktion} aus der empirischen Säuglingsforschung dar. Kindliche Gefühlszustände und Verhaltensmuster werden durch elterliche Verhaltensmuster induziert \cite{Cummings1994}. Intrusive feindliche und unsensitive Elternreaktionen können einen negativen Erregnungsprozess im Kind auslösen, woraus sich ungünstige Interferenzen mit den sich entwickelnden Fähigkeiten des Kindes ergeben, seine eigenen Erregungsimpulse zu modulieren und zu regulieren.  
 
 Über Imitationsprozesse kann die \textit{Modellbildung} im Kind durch das elterliche Verhalten beeinflusst werden. Elterliche Verhaltensweisen und Sichtweisen gegenüber der Welt werden internalisiert \cite{Resch1999}. Die Eltertn ebeeinflussen die Entwicklung des Kindes nicht nur als direkte Akteure, sondern eben auch durch ihre Vorbildfunktion. 
 
-Durch die frühe Interaktion mit einer Bezugsperson wird auch die interaktionelle Affektregulation geprägt. Nach \citeA{Dornes1993, Dornes1997} werden in den frühen Interaktionen zwischen Mutter und Kind affekthaltige Handlungen ausgetauscht. Das Kind kann seine innere Erfahrung mit einem anderen Menschen teilen und mit diesem darüber Kommunizieren. Eine Form dieser affektiven Kommunikation wird gemäss \citeA{Stern1985} als \textit{Affektabstimmung (engl. affective attunement)} bezeichnet. Dabei wird auf bestimmte Gefühlsäusserungen des Kindes von Seiten der Mutter differenziert geantwortet, wobei die Antwort etwas stärker oder schwächer als die des Kindes ausfällt. Durch gezieltes Abdämpfen oder Stimulieren der kindlichen Gefühslausdrücke und Aktionen können Erlebnis- und Handlugsfolgen akzentuiert, abgedämpft oder sogar gelöscht werden. Reagiert eine Bezugsperson unsensibel auf das Kind und werden Handlungsintentionen immer wieder unterbrochen, so kann sich dies negativ auf die Entwicklung des Kindes auswirken \cite{Resch1999}.
+Durch die frühe Interaktion mit einer Bezugsperson wird auch die interaktionelle \textit{Affektregulation} geprägt. Nach \citeA{Dornes1993, Dornes1997} werden in den frühen Interaktionen zwischen Mutter und Kind affekthaltige Handlungen ausgetauscht. Das Kind kann seine innere Erfahrung mit einem anderen Menschen teilen und mit diesem darüber Kommunizieren. Eine Form dieser affektiven Kommunikation wird gemäss \citeA{Stern1985} als \textit{Affektabstimmung (engl. affective attunement)} bezeichnet. Dabei wird auf bestimmte Gefühlsäusserungen des Kindes von Seiten der Mutter differenziert geantwortet, wobei die Antwort etwas stärker oder schwächer als die des Kindes ausfällt. Durch gezieltes Abdämpfen oder Stimulieren der kindlichen Gefühslausdrücke und Aktionen können Erlebnis- und Handlugsfolgen akzentuiert, abgedämpft oder sogar gelöscht werden. Reagiert eine Bezugsperson unsensibel auf das Kind und werden Handlungsintentionen immer wieder unterbrochen, so kann sich dies negativ auf die Entwicklung des Kindes auswirken \cite{Resch1999}.
 
 Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontingenz} genannt. Gemeint ist dabei die regelhafte Aufeinanderfolge einzelnen Verhaltensschritte. Die Wichtigkeit kontingenter Beantwortung kindlicher Signale, vor allem in der Anfangsphase der Eltern-Kind-Beziehung, betont \citeA{Papousek1987, Papousek1989}. Kontingenz bedeutet dabei die zeitliche und inhaltliche Passung der elterlichen Reaktion auf das Verhalten des Kindes, also die zeitliche Folge der Reaktion und die inhaltliche Entsprechung. Diese frühe Verständigung zwischen Eltern und Kind würde nicht gelingen, wenn die Eltern nicht kompensatorisch an die begrenzte kindlichen Voraussetzungen anpassen würden. Diese Fähigkeit schafft die Voraussetzung für eine gelingende Kommunikation mit dem Säugling im vorsprachlichen Alter. Kontingentes Antworten von Seiten der Eltern ermöglicht eine Kohärenz der Interaktion, die zum subjektiven Gefühl der Kontrolle beim Kind führt.
 
 \textit{Erziehungsstile} sind Verhaltensweisen und Einstellungen, die das emotionale Klima für die Eltern-Kind-Interaktion bestimmen \cite[S.~649]{Siegler2008}. Um den Einfluss den Eltern auf die Entwicklung von Kindern nehmen können, wurden zwei Dimensionen des Erziehungsstils identifiziert: (1) das Ausmass an elterlichen Wärme, Unterstützung und Akzeptanz, und (2) das Ausmass an elterlicher Kontrolle und Anforderung \cite{Maccoby1983}. Diese Aspekte der der elterlichen Erziehung scheinen eine wichtige Rolle bei der Ausbildung interindividueller Unterschiede zwischen Kindern zu spielen. \citeA{Baumrind1973} entwickelte anhand der Dimensionen Unterstützung und Kontrolle vier Erziehungsstile: autoritativ, autoritär, permissiv und vernachlässigend-zurückweisend \cite{Baumrind1991}. Nach dieser Typologie neigen \textbf{autoritative} Eltern dazu Anforderungen zu stellen, aber auch auf das Kind einzugehen und warmherzig zu sein. Gemäss \citeA{Baumrind1991} sind Kinder autoritativer Eltern häufig kompetent, selbstbewusst und bei ihren Altersgenossen beliebt. Als Jugendliche besitzen sie häufig hohe soziale und schulische Fähigkeiten, Selbstvertrauen und positive Verhaltensweisen \cite{Lamborn1991}. \textbf{Autoritäre} Eltern sind oft kalt und reagieren nicht auf die Bedürfnisse ihrer Kinder. Des Weiteren üben sie starke Kontrolle aus und stellen hohe Anforderungen. Forderungen an die Kinder erzwingen sie oft durch Ausüben ihrer elterlichen Macht. Kinder autoritärer Eltern besitzen oft relativ geringe soziale und schilische Kompetenzen, sind unglücklich und unfreundlich und besitzen ein geringes Selbstvertrauen. Im Jugendalter wirkt sich dies auf eine geringere soziale und schulische Kompetenz im Vergleich zu Kindern autoritätiver Eltern aus \cite{Baumrind1991, Lamborn1991}.  \textbf{Permissive} Eltern reagieren auf die Bedürfnisse und Wünsche ihrer Kinder und sind nachsichtig. Sie sind nicht konservativ und verlangen von ihren Kindern nicht sich selbst zu regulieren. Kinder permissiver Eltern sind häufig impulsiv, es fehlt ihnen an Slebstbeherrschung und zeigen oft schawache schulische Leistungen \cite{Baumrind1991}. Als Jugendliche fallen sie durch häufigen Drogenkonsum und schlechtes Benehmen gegenüber Kindern autoritativer Eltern auf \cite{Lamborn1991}. \textbf{Zurückweisend-vernachlässigende} Eltern sind uninteressierte Eltern, die wenig Anforderungen stellen und auch wenig auf sie reagieren. Sie setzen dem Verhalten der Kinder keine Grenzen und kontrollieren es auch nicht. Säuglinge und Kleinkinder zurückweisend-vernachlässigender Eltern weisen häufig gestörte Bindungsbeziehungen und Probleme in der Beziehungsgestaltung zu ihren Altersgenossen auf \cite{Parke1998}.
 
 
-\subsubsection{Entwicklungsaufgaben der Kinder}\label{sec:Entwicklungsaufgaben}
+\subsubsection{Entwicklungsaufgaben der Kinder}\label{sec:Entwicklungsaufgaben} Über die Enticklungsaufgaben der Kinder lassen sich ganze Bücher schreiben. Es sind deren zahlreiche geschrieben worden und der Rahmen dieser Arbeit würde gesprengt werden, müssten hier alle Ansätze und Theorien Platz finden. Aus diesem Grund wurde eine Auswahl getroffen, die keinen Anspruch auf Vollständigkeit erhebt und doch die scheinbar relevantesten im Bereich der Eltern-Kind-Beziehung unter dem Fokus der Interaktion näher beleuchtet. Dadurch soll dem Anspruch genüge getan werden, wichtige theoretische Inputs für die Klärung der Forschungsfrage dieser Arbeit zu liefern. Zum Beispiel wird die körperliche Entwicklung, wenn auch eine wichtige Aufgabe eines Kindes, hier nicht weiter behandelt, da die Schnittpunkte zum Forschungsthema zu gering ausfallen.
+
+Bei der \textit{kognitiven Entwicklung} spielen die sozio-kulturellen Theorien eine wichtige Rolle im Eltern-Kind-Gefüge. Dabei handelt es sich um Theorien, die die Bedeutung der Interaktion zwischen Kindern und andern Menschen und die umgebende Kultur für die Entwicklung der Kinder ins Zentrum rücken \cite[S.~225ff]{Siegler2008}. TBD: gelenkte Partizipation
 
 % ---------------------------------------
 \begin{itemize}
@@ -53,19 +55,21 @@ Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontinge
         \item Bindungstheorie S.583ff \citeA{Siegler2008} (Buch Jeannette)
     \end{itemize}
     \item Die Entwicklungs des Selbst S.274 aus \citeA{Berk2011} (ZHAW Online) 
-    \item Erziehungsstile S. 649 aus \citeA{Siegler2008} (Buch Jeannette)
 \end{itemize}
 
 
 
 % ---------------------------------------
-\subsection{TBD: Bindung}\label{sec:Bindung}
+\subsection{TBD: Medienverhalten der Eltern}\label{sec:Medienverhalten}
+Unter dem Medienverhalten der Eltern laufen viele Faktoren zusammen. Wie bereits erläutert, definiert sich das Ziel dieser Arbeit das Medienverhalten der Eltern unter dem Gesichtspunkt der Bindung, dem Stress und dem subjektiven Wohlbefinden zu betrachten. Diese theoretischen Konstrukte werden im Folgenden, für die in dieser Arbeit notwendigen Tiefe, behandelt.
+% ---------------------------------------
+\subsubsection{TBD: Bindung}\label{sec:Bindung}
 
 % ---------------------------------------
-\subsection{TBD: Stress}\label{sec:Stress}
+\subsubsection{TBD: Stress}\label{sec:Stress}
 
 % ---------------------------------------
-\subsection{TBD: Subjektives Wohlbefinden}\label{sec:Swb}
+\subsubsection{TBD: Subjektives Wohlbefinden}\label{sec:Swb}
 
 
 
