--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -30,16 +30,19 @@ Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontinge
 
 \subsubsection{Entwicklungsaufgaben der Kinder}\label{sec:Entwicklungsaufgaben} Über die Enticklungsaufgaben der Kinder lassen sich ganze Bücher schreiben. Es sind deren zahlreiche geschrieben worden und der Rahmen dieser Arbeit würde gesprengt werden, müssten hier alle Ansätze und Theorien Platz finden. Aus diesem Grund wurde eine Auswahl getroffen, die keinen Anspruch auf Vollständigkeit erhebt und doch die scheinbar relevantesten im Bereich der Eltern-Kind-Beziehung unter dem Fokus der Interaktion näher beleuchtet. Dadurch soll dem Anspruch genüge getan werden, wichtige theoretische Inputs für die Klärung der Forschungsfrage dieser Arbeit zu liefern. Zum Beispiel wird die körperliche Entwicklung, wenn auch eine wichtige Aufgabe eines Kindes, hier nicht weiter behandelt, da die Schnittpunkte zum Forschungsthema zu gering ausfallen.
 
-Bei der \textit{kognitiven Entwicklung} spielen die sozio-kulturellen Theorien eine wichtige Rolle im Eltern-Kind-Gefüge. Dabei handelt es sich um Theorien, die die Bedeutung der Interaktion zwischen Kindern und andern Menschen und die umgebende Kultur für die Entwicklung der Kinder ins Zentrum rücken \cite[S.~225ff]{Siegler2008}. TBD: gelenkte Partizipation
+\paragraph{Kognitiven Entwicklung}
+Bei der \textit{kognitiven Entwicklung} spielen die sozio-kulturellen Theorien eine wichtige Rolle im Eltern-Kind-Gefüge. Dabei handelt es sich um Theorien, die die Bedeutung der Interaktion zwischen Kindern und andern Menschen zusammen mit der umgebenden Kultur ins Zentrum für die Entwicklung der Kinder rücken \cite[S.~225ff]{Siegler2008}. Als Beispiel für eine sozio-julturelle Theorie kann die \textit{gelenkte Partizipation} genommen werden. Darunter wird ein Prozess verstanden, bei dem als Experten geltende Erwachsene ihre Aktivität so gestalten, dass sich Menschen mit geringeren Kenntnissen - in diesem Fall die Kinder - an diesen beteiligen können, obwohl sie von sich aus dazu noch nicht fähig sind und daraus etwas lernen können \cite{Rogoff1990}. Die gelenkte Partizipation dient oft der Erreichung eines praktischen Ziels, wie dem Zusammenbauen eines Autos. Das Lernen ist dabei ein Nebenprodukt der Tätigkeit.
+
+Weiter ist die Interaktion zwischen den Eltern und dem Kind in der Einbettung des kulturellen Kontext für die Entwicklung wichtig. Es gehören nicht nur andere Menschen dazu, sondern auch die zahlreichen Prudukte der menschlichen Erfindungskraft, die als sogenannte Kulturwerkzeuge bezeichnet werden. Dazu gelten Symbolsysteme, Artefakte, Fähigkeiten und Werte \cite[S.~226]{Siegler2008}. Gemäss Wygotski, ein russischer Psychologe und Zeitgenosse von Piaget, sind Kinder soziale Wesen, geformt durch ihren kulturellen Kontext, den sie auch selbst wiederum mitgestalten (vgl. ebd. S.~227). 
+
+Als Grundlage der kognitiven Entwicklung des Menschen gelten gemäss sozio-kulturellen Theoretikern in der Fähigkeit, \textit{Intersubjektivität} herzustellen. Das wechselseitige Verständnis, das Menschen bei der Kommunikation füreinander aufbringen \cite{Gauvain2001, Rogoff1990}. Dabei gilt, dass für eine effektive Verständigung, sich die Beteiligten auf dasselbe Thema konzentrieren und ebenso auf die Reaktion des andern achten müssen. Dazu ist ein wirksames Lehren und Lernen unverzichtbar. Zwei bis drei monatige Säuglingen sind lebhafter und interessierter, wenn die Bezugsperson auf ihre Aktionen reagiert \cite{Murray1985}. Sechs monatige Kinder können neue Verhaltensweisen allein durch die Beobachtung des Verhalten anderer Menschen erlernen \cite{Collie1999}. Im Zentrum der Intersubjektivität steht die \textit{geteilte Aufmerksamkeit (engl. joint attention)}, welches ein Prozess beschreibt, bei dem die sozialen Partner ihre Aufmerksamkeit intendiert auf einen gemeinsamen Gegenstand richten in der äusseren Umwelt. Zum Beispiel schauen die Kinder im Alter zwischen neun und 15 Monaten zunehmend auf dieselben Gegenstände wie ihre Sozialpartner und richten die Aufmerksamkeit von Erwachsenen aktiv auf Objekte, die sie selber interessieren \cite{Adamson1991, Gauvain2001}. Diese gemeinsame Aufmerksamkeit spielt eine wichtige Rolle bei der frühen Sprachentwicklung \cite[S.~232]{Berk2011}. Eine verwandte Verhaltensweise (\prettyref{sec:Interaktion}) ist das \textit{soziale Referenzieren (engl. social referencing)}, ein Verhalten, um vom Sozialpartner einen Rat oder eine Anleitung für eine unbekannte oder bedrohliche Situation zu bekommen, indem dieser angeschaut wird \cite{Campos1981}. 
+
+Das frühe Umfeld ist für die Entwicklung des Kindes existentiell wichtig. \citeA{Fuligni2004, Linver2004, TamisLeMonda2004} konnten aufzeigen, dass Zuneigung, Engagement sowie Ermutigung der Eltern bei den Säuglingen und Kleinkinder bessere Ergebnisse bei Sprach- und Intelligenztests hervorrufen. Das Ausmass, indem Eltern mit ihren Säuglingen sprechen, trägt erheblich zum frühen Fortschritt des Spracherwerbs bei, was wiederum förderlich für die Intelligenz und gute Schulleistungen in der Grundschule ist \cite{Hart1995}. Warmherziges, einfühlsames elterliches Verhalten ist ein guter Indikator, wie das Kind kognitiv später abschneiden wird \cite[S.~225]{Berk2011}. Der Betreuung steht demzufolge ein grosser Anteil der Entwicklungsarbeit zu. Die Forschung konnte aufzeigen, dass schlecht betreute Kinder, in kognitiven und sozialen Fertigkeiten schlechter abschneiden \cite{NICHD2006}.
+
+\paragraph{Soziale Entwicklung}
 
 % ---------------------------------------
 \begin{itemize}
-    \item Kognitive Entwicklung $\rightarrow$ Umfeld, Vererbung aus \citeA{Berk2011} Kapitel 5.4.2; Seite 224 (Online ZHAW)
-    \begin{itemize}
-        \item Pos. Korrelation bei Zuneigung und Engagement
-        \item schlechte Betreuung S.225 $\rightarrow$ schlechte kognitive Entwicklung
-        \item Kommunizieren lernen S.231 / Kap. 5.5 $\rightarrow$ Blickkontakt, Interaktion, viel Unterhaltung förder S. 235, Förderung des frühen Spracherwerbs S.236
-    \end{itemize}
     \item Soziale Entwicklung
     \begin{itemize}
         \item Soziale Entwicklung S.469ff \citeA{Siegler2008} (Buch Jeannette)
