--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -30,7 +30,7 @@ Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontinge
 
 \subsubsection{Entwicklungsaufgaben der Kinder}\label{sec:Entwicklungsaufgaben} Über die Enticklungsaufgaben der Kinder lassen sich ganze Bücher schreiben. Es sind deren zahlreiche geschrieben worden und der Rahmen dieser Arbeit würde gesprengt werden, müssten hier alle Ansätze und Theorien Platz finden. Aus diesem Grund wurde eine Auswahl getroffen, die keinen Anspruch auf Vollständigkeit erhebt und doch die scheinbar relevantesten im Bereich der Eltern-Kind-Beziehung unter dem Fokus der Interaktion näher beleuchtet. Dadurch soll dem Anspruch genüge getan werden, wichtige theoretische Inputs für die Klärung der Forschungsfrage dieser Arbeit zu liefern. Zum Beispiel wird die körperliche Entwicklung, wenn auch eine wichtige Aufgabe eines Kindes, hier nicht weiter behandelt, da die Schnittpunkte zum Forschungsthema zu gering ausfallen.
 
-\paragraph{Kognitiven Entwicklung}\label{sec:KognitiveEntwicklung}
+\paragraph{Kognitiven Entwicklung}\label{par:KognitiveEntwicklung}
 Bei der \textit{kognitiven Entwicklung} spielen die sozio-kulturellen Theorien eine wichtige Rolle im Eltern-Kind-Gefüge. Dabei handelt es sich um Theorien, die die Bedeutung der Interaktion zwischen Kindern und andern Menschen zusammen mit der umgebenden Kultur ins Zentrum für die Entwicklung der Kinder rücken \cite[S.~225ff]{Siegler2008}. Als Beispiel für eine sozio-kulturelle Theorie kann die \textit{gelenkte Partizipation} genommen werden. Darunter wird ein Prozess verstanden, bei dem als Experten geltende Erwachsene ihre Aktivität so gestalten, dass sich Menschen mit geringeren Kenntnissen - in diesem Fall die Kinder - an diesen beteiligen können, obwohl sie von sich aus dazu noch nicht fähig sind und daraus etwas lernen können \cite{Rogoff1990}. Die gelenkte Partizipation dient oft der Erreichung eines praktischen Ziels, wie dem Zusammenbauen eines Autos. Das Lernen ist dabei ein Nebenprodukt der Tätigkeit.
 
 Weiter ist die Interaktion zwischen den Eltern und dem Kind in der Einbettung des kulturellen Kontext für die Entwicklung wichtig. Es gehören nicht nur andere Menschen dazu, sondern auch die zahlreichen Prudukte der menschlichen Erfindungskraft, die als sogenannte Kulturwerkzeuge bezeichnet werden. Dazu gelten Symbolsysteme, Artefakte, Fähigkeiten und Werte \cite[S.~226]{Siegler2008}. Gemäss Wygotski, ein russischer Psychologe und Zeitgenosse von Piaget, sind Kinder soziale Wesen, geformt durch ihren kulturellen Kontext, den sie auch selbst wiederum mitgestalten (vgl. ebd. S.~227). 
@@ -39,21 +39,29 @@ Als Grundlage der kognitiven Entwicklung des Menschen gelten gemäss sozio-kultu
 
 Das frühe Umfeld ist für die Entwicklung des Kindes existentiell wichtig. \citeA{Fuligni2004, Linver2004, TamisLeMonda2004} konnten aufzeigen, dass Zuneigung, Engagement sowie Ermutigung der Eltern bei den Säuglingen und Kleinkinder bessere Ergebnisse bei Sprach- und Intelligenztests hervorrufen. Das Ausmass, indem Eltern mit ihren Säuglingen sprechen, trägt erheblich zum frühen Fortschritt des Spracherwerbs bei, was wiederum förderlich für die Intelligenz und gute Schulleistungen in der Grundschule ist \cite{Hart1995}. Warmherziges, einfühlsames elterliches Verhalten ist ein guter Indikator, wie das Kind kognitiv später abschneiden wird \cite[S.~225]{Berk2011}. Der Betreuung steht demzufolge ein grosser Anteil der Entwicklungsarbeit zu. Die Forschung konnte aufzeigen, dass schlecht betreute Kinder, in kognitiven und sozialen Fertigkeiten schlechter abschneiden \cite{NICHD2006}.
 
-\paragraph{Soziale Entwicklung}\label{sec:SozialeEntwicklung}
-Theorien sozialer Entwicklung versuchen zu erklären, wie Menschen und soziale Institutionen in der Umwelt von Kindern auf ihre Entwicklung einwirken \cite[S.~470ff]{Siegler2008}. Diese Theorien sind auf die Erklärung vieler wichtiger Entwicklungsaspekte gerichtet, wie zum Beispiel Emotion, Persönlichkeit, Bindung, Selbst, Beziehung zu Gleichatligen, Moral oder Geschlecht. Bei den psychoanalytischen Theorien von Freud und Erikson wird die soziale Entwicklung  durch die biologische Reifung betont. Für Freud ist das Verhalten durch die Befriedigung von grundlegenden Trieben definiert, die weitgehend unbewusst ablaufen. In der Theorie von Erikson wird die Entwicklung durch eine reihe altersbezogener Entwicklungskrisen, resp. Entwicklungsausfgaben vorangetrieben (vgl. ebd. S.~472). Die Bedeutung dieser beider Theorien liegen auf der Betonung der Wichtigkeit früher Lebenserfahrungen und der emotionalen Beziehung, sowie die Suche nach Identität. Erikson betonte, dass für eine gesunde Entwicklung nicht die Quantität der Zuwendung zwischen Kind und Bezugsperson ausschlaggebend ist, sondern vielmehr die Qualität \cite[S.~243]{Berk2011}. Nämlich dass sich zum Beispiel die Mutter unverzüglich und einfühlend um ihr Kind kümmert und sich durch diesen liebevollen Umgang der psychische Konflikt zwischen Urvertrauen versus Misstrauen positive lösen lässt. Zudem betont Erikson, dass der Konflikt des Kleinkindes betreffend Autonomie versus Scham und Zweifel positiv aufgelöst wird, wenn Eltern ihrem Kind klare Grenzen aufzeigen und genügend Möglichkeiten zur Entfaltung bieten. 
+\paragraph{Soziale Entwicklung}\label{par:SozialeEntwicklung}
+Theorien sozialer Entwicklung versuchen zu erklären, wie Menschen und soziale Institutionen in der Umwelt von Kindern auf ihre Entwicklung einwirken \cite[S.~470ff]{Siegler2008}. Diese Theorien sind auf die Erklärung vieler wichtiger Entwicklungsaspekte gerichtet, wie zum Beispiel Emotion, Persönlichkeit, Bindung, Selbst, Beziehung zu Gleichatligen, Moral oder Geschlecht. Bei den psychoanalytischen Theorien von Freud und Erikson wird die soziale Entwicklung  durch die biologische Reifung betont. Für Freud ist das Verhalten durch die Befriedigung von grundlegenden Trieben definiert, die weitgehend unbewusst ablaufen. In der Theorie von Erikson wird die Entwicklung durch eine reihe altersbezogener Entwicklungskrisen, resp. Entwicklungsaufgaben \hyphenation{vor-an-ge-trieben} (vgl. ebd. S.~472). Die Bedeutung dieser beider Theorien liegen auf der Betonung der Wichtigkeit früher Lebenserfahrungen und der emotionalen Beziehung, sowie die Suche nach Identität. Erikson betonte, dass für eine gesunde Entwicklung nicht die Quantität der Zuwendung zwischen Kind und Bezugsperson ausschlaggebend ist, sondern vielmehr die Qualität \cite[S.~243]{Berk2011}. Nämlich dass sich zum Beispiel die Mutter unverzüglich und einfühlend um ihr Kind kümmert und sich durch diesen liebevollen Umgang der psychische Konflikt zwischen Urvertrauen versus Misstrauen positive lösen lässt. Zudem betont Erikson, dass der Konflikt des Kleinkindes betreffend Autonomie versus Scham und Zweifel positiv aufgelöst wird, wenn Eltern ihrem Kind klare Grenzen aufzeigen und genügend Möglichkeiten zur Entfaltung bieten. 
 
 Im Gebiet der Lerntheorien soll für diese Arbeit vor allem die Theorie des \textit{sozialen Lernens} hervorgehoben werden. Diese versucht die Persönlichkeit und andere Aspekte der sozialen Entwicklung anhand von Lernmechanismen zu erklären, wobei die Beobachtung und Nachahmung als Mechanismen im Zentrum stehen. \citeA{Bandura1979, Bandura1986} gibt an, dass der grösste Teil des menschlichen Lernens sozialer Natur sei und auf der Beobachtung des Verhaltens anderer Menschen beruhe. Kinder würden am schnellsten lernen, indem sie anderen Menschen zuschauen und sie anschliessend imitieren \cite[S.~482ff]{Siegler2008}. Im Gegensatz zu den meisten anderen Lerntheoretikern betont Bandura die aktive Rolle der Kindern in ihrer Umwelt und Entwicklung als reziproken Determinismus zwischen ihnen und ihrer sozialen Umwelt. Kinder werden durch die Umweltaspekte beeinflusst, beeinflussen aber auch selbst die Umwelt (ebd.). 
 
 Die Theorien der \textit{sozialen Kognition} befassen sich mit der Fähigkeit von Kindern, über Gefühle, Gedanken, Motive und Verhaltensweisen bei sich und anderer Menschen nachzudenken und daraus Schlüsse zu ziehen \cite[S.~486ff]{Siegler2008}. Somit umfasst die soziale Kognition alle Leistungen, die Aufschluss über die psychische Verfassung eines Anderen liefern \cite[S.~237ff]{Bischof2011}. Kinder verarbeiten soziale Informationen aktiv. Dabei achten sie darauf was andere Menschen sagen und tun, ziehen daraus permanten Schlüsse, nehmen Interpretationen vor und konstruieren Erklärungen \cite{Siegler2008}. Die soziale Kompetenz im ersten Lebensjahr beruht im Wesentlichen auf emotionalem Erleben, indem auf soziale Situationen mit angemessenen Emotionen reagiert wird. Die Emotionen dienen somit als Grundlage der sozialen Kognition bei Säuglingen \cite{Bischof2011}. Bereits Neugebohrene lassen sich vom Geschrei anderer Babys anstecken \cite{Simner1971}. Die Reaktion erfolgt auf die menschliche Stimme und nicht etwa auf das Geräusch, was mit dem Begriff \textit{Gefühlsansteckung (engl. sharing of emotion)} gemäss \citeA{Tomasello2005} umschreiben wird.
 
-Zusammenfassend kann gesagt werden, dass die Entwicklungsaufgaben bezüglich sozialer Entwicklung Vertrauen und Autonomie aufzubauen sind \cite[S.~224]{Berk2011}. Dies gelingt besonders gut in einer warmherzigen und einfühlsamen Beziehung zwischen Eltern und Kind.
+Zusammenfassend kann gesagt werden, dass die Entwicklungsaufgaben bezüglich sozialer Entwicklung Vertrauen und Autonomie aufzubauen sind. Dies gelingt besonders gut in einer warmherzigen und einfühlsamen Beziehung zwischen Eltern und Kind \cite[S.~224]{Berk2011}.
+
+\paragraph{Emotionale Entwicklung}\label{par:EmotionaleEntwicklung}
+Emotionen sind durch ihre motivationale Kraft oder Handlungstendenz gekennzeichnet. Sie werden von Funktionalisten als der Versuch oder die Bereitschaft definiert, eine Beziehung mit der Umwelt hinsichtlich relevanter Apslekte herzustellen \cite[S.~529ff]{Siegler2008}. Emotionen sind von grundlegender Bedeutung für die Organisation von Fähigkeiten wie der Aufbau von Beziehungen, die Erkundung der Umwelt und die Entdeckung des eigenen Selbst \cite{Halle2003, Saarni2006}. Grundemotionen wie Freude, Furcht (Angst), Ärger (Wut) und Traurigkeit sind bei Menschen unviversell. Die frühe Gefühlslage eines Säuglings besteht aus wenig mehr als zwei umfassende Erregunszustände: einem sich zu einem angenehmen Stimuli hingezogenen und einem von unangenehmen Stimuli zurückziehenden \cite{Camras2003, Fox1991}. Erst mit der Zeit entwickeln sich Emotionen zu deutlicheren Zeichen. Sensible und passende Kommunikation von Eltern, bei der sie auf einzelne Aspekte des undifferenzierten emotionalen Verhaltens eines Säuglings eingehen, helfen dem Kind emotionale Ausdrucksformen zu entwickeln \cite{Gergely1999}. Eltern, die für die Signale ihrer Kinder wenig empfänglich sind, rufen bei ihren Kindern häufig traurige Gesichter, unklare Verbalisierungen, einen zusammensinkenden Körper, ein ärgerliches Gesicht oder Weinen und "nimm-mich-auf-den-Arm"-Gesten hervor \cite{Weinberg1994, Yale1999}. Bis in die Mitte des ersten Lebensjahr sind emotionale Ausdrucksformen bereits gut organisiert und spezifisch, die viel über das innere Befinden des Kindes aussagen \cite{Berk2011}. Wenn die Kommunikation zwischen Bezugsperson und Säugling ernsthaft gestört ist, kann häufig Traurigkeit auf Seiten des Säuglings beobachtet werden. Dies kann zum Beispiel bei einer depressiven Mutter oder eines depressiven Vaters geschehen, da die Fürsorge für ihr Kind beeinträchtigt ist und die Entwicklung erheblich stören kann.
+
+Die \textit{emotionale Selbstregulierung} bezeichnet die Fähigkeit, innerer Gefühlszustände zu initiieren, zu hemmen oder zu modulieren, um ein Ziel zu erreichen \cite{Siegler2008}. In den ersten Lebensmonaten helfen Eltern ihren Kindern ihre emotionale Erregung zu regulieren, indem sie kontrollieren, wie stark diese den stimulierenden Ereignissen ausgesetzt sind \cite{Gianino1988}. Ein Säugling ist weniger empfindlich, äussert häufig angenehme Emotionen, erkundet sein Umfeld interessierter und ist leichter zu beruhigen, wenn dessen Eltern angemessen und liebevoll auf seine Hinweisreize reagieren \cite{Crockenberg2004}. Bezugspersonen, die gefühlsbelastenden Erlebnissen des Kindes unzureichend regulieren, riskieren, dass sich Gehirnstrukturen unzureichend entwickeln, welche für Stressregulierung dienen \cite[S.~250]{Berk2011}. Ab dem achten Monat beginnt der Säugling mit der sozialen Bezugnahme, er sucht aktiv nach emotional bewertenden Informationen von einem ihm vertrauten Person \cite{Mumme2007}. Im Allgemein geht die soziale Selbstregulierung mit einer höheren sozialen Kompetenz und einem geringeren Problemverhalten einher \cite[S.~580]{Siegler2008}. 
+
+Die Qualität der Eltern-Kind-Beziehung kann die emotionale Entwicklung der Kinder auf verschiedene Arten beeinflussen. Es scheint als ob die Beziehungsqualität das Sicherheitsgefühl des Kindes sowie die Empfindung gegenüber der eigenen Person und andere Menschen beeinflusst (vgl. Kapitel \titleref{sec:Bindung}, S. \pageref{sec:Bindung}). Diese Gefühle wiederum, beeinflusst die Emotionalität der Kinder \cite[S.~561]{Siegler2008}. Im Allgemeinen zeigen Kinder mit einer sicheren Bindung zu ihren Eltern eher positive Emotionen und weniger soziale Ängstlichkeit, verglichen mit Kindern mit einer unsichere Bindung \cite{Bohlin2000}. Der Ausdruck von Emotionen der Eltern kann die soziale Kompetenz und das psychische Wohlbefinden der Kinder beeinflussen. Die Sicht der Kinder auf sich selbst und andere hängt im hohen Masse von den Emotionen ab, die zu Hause gezeigt werden \cite{Dunsmore1997}. Zudem dient der elterliche Umgang mit Emotionen den Kindern als Modell, im Sinne von wann und wie Emotionen ausgedrückt werden \cite{Denham1994}. Dies kann das kindliche Verständnis zwischenmenschlicher Beziehung insofern beeinflussen, welche Formen des emotionalen Ausdrucks angemessen und effektiv ist \cite{Halberstadt1995}. Die Reaktionen der Eltern auf die Emotionen der Kinder scheinen einen Einfluss auf die emotionale Ausdrucksweise der Kinder zu haben. Werden Traurigkeit und Ängstlichkeit bei Kinder von den Eltern abgetan oder deren Gefühle kritisiert, so sind diese Kinder im Allgemeinen weniger emotional und weisen eine geringere soziale Kompetenz auf als Kinder, deren Eltern sie emotional unterstützen \cite{Eisenberg1998, McDowell2000}. 
+
+\paragraph{TBD:Bindung}\label{par:Bindung}
+
+\paragraph{Die Entwicklung des Selbst}\label{par:EntwSelbst}
+
 
 % ---------------------------------------
 \begin{itemize}
-    \item Emotionale Entwicklung von Kindern in der Famile aus \citeA{Siegler2008} (Buch Jeannette)
-    \begin{itemize}
-        \item Qualität Eltern Kind Beziehung S. 561
-    \end{itemize}
     \item Bindung aus diversen Quellen
     \begin{itemize}
         \item Bindung und Bindungsverhalten S.98 \citeA{Resch1999} (Buch von Marc)
