Sec: Methode - Struktur

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -1,9 +1,10 @@
 % ---------------------------------------
-\subsection{Design} \label{sec:Design}
+\subsection{Design \& Operationalisiserung} \label{sec:Design}
+Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Die Generierung der Daten für die Beantwortung der Fragestellung erfolgte mittels Internet-Fragebogen. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte. 
 
-\subsection{Versuchsablauf}
-\subsection{Stichprobe}
-\subsection{Operationalisierung der Konstrukte}
-\subsection{Weitere Variablen (Kovariate)}
+Diese Studie verfolgte das Ziel, mögliche Tendenzen aufzuzeigen. Durch die Befragung einer spezifischen Bevölkerungsgruppe können die Resultate nicht auf die Gesamtbevölkerung verallgemeinert werden und dienen einer exemplarischen Betrachtung.
+
+\subsection{Datenerhebung}
+\subsection{Beschreibung der Stichprobe}
 \subsection{Empirische Hypothesen}
 \subsection{Statistische Analyseverfahren}
