--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,13 +1,13 @@
 % ---------------------------------------
-\subsection{\textit{WiP:} Theoretische Überlegungen anhand der Eltern-Kind-Beziehung}\label{sec:TheretischeÜberlegungen}
-Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{ElternKindBeziehung1999}. Ursprünglich als Mutter-Kind-Beziehung, wurde dies aufgrund wissenschaftlicher Ergebnisse zum Begriff Eltern-Kind-Beziehung erweitert, da auch ein konstanter, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppe aufbauen. Dabei muss die Gelegenheit zu regelmässigen Zwiegesprächen gegeben sein, wodurch durch die Anwesenheit und Zuspruch der vertraut gewordenen Menschen die innere Sicherheit, Geborgenheit und Angstfreiheit beim Kind. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{ElternKindBeziehung1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmale unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern bezieht. Wo sich hingegen die Strukturmerkmale auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kinder bezieht. Die Qualität der Beziehung kann einerseit unter der systemischen Perspektive betrachtet werden, in dem der Familienprozess als das Ergebnis wechselseiteiger Beeinflussung aller Familienmitgliederbetrachtet wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Weiter kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung und deren erziehungsstile gesetzt wird. 
+\subsection{Theoretische Überlegungen anhand der Eltern-Kind-Beziehung}\label{sec:TheretischeÜberlegungen}
+Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{ElternKindBeziehung1999}. Ursprünglich als Mutter-Kind-Beziehung, wurde dies aufgrund wissenschaftlicher Ergebnisse zum Begriff Eltern-Kind-Beziehung erweitert, da auch ein konstanter, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppe aufbauen. Dabei muss die Gelegenheit zu regelmässigen Zwiegesprächen gegeben sein, wodurch durch die Anwesenheit und Zuspruch der vertraut gewordenen Menschen die innere Sicherheit, Geborgenheit und Angstfreiheit beim Kind. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{ElternKindBeziehung1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmale unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern bezieht. Wo sich hingegen die Strukturmerkmale auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kinder beziehen. Die Qualität der Beziehung kann unter der systemischen Perspektive betrachtet werden, in dem der Familienprozess als das Ergebnis wechselseitiger Beeinflussung aller Familienmitglieder betrachtet wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Des weiteren kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung und deren Erziehungsstile gesetzt wird. 
 
-Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundlegenden Umstrukturierung einer Zweier- zu einer Dreierbeziehung \cite{Hofer1992, Buergin1998}. Dies gelte als eine zentrale Entwicklungsaufgabe von Familien, wobei die Eltern-Kind-Beziehung nicht als einseitige Einflussnahme zu verstehen ist, sondern die Eltern und die Kinder stehen in einer reziproken sozialisatorischen Beziehung zueinander. \citeA{Hofer1992} nennt wichtige Einflussgrössen der dyadischen Beziehung zwischen Vater, Mutter und Kind, die sich auf die kindliche Entwicklung auswirken können: Dabei wird die Synchronizität der Interaktion, die Persönlichkeit der Eltern, die Beziehungsqualität der Partner, sowie die affektive und kognitive Ausstattung des Kindes selbst genannt. 
+Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundlegenden Umstrukturierung von einer Zweier- zu einer Dreierbeziehung \cite{Hofer1992, Buergin1998}. Dies gelte als eine zentrale Entwicklungsaufgabe von Familien, wobei die Eltern-Kind-Beziehung nicht als einseitige Einflussnahme zu verstehen ist, sondern die Eltern und die Kinder in einer reziproken sozialisatorischen Beziehung zueinander stehen. \citeA{Hofer1992} nennt wichtige Einflussgrössen der dyadischen Beziehung zwischen Vater, Mutter und Kind, die sich auf die kindliche Entwicklung auswirken können: Dies ist die Synchronizität der Interaktion, die Persönlichkeit der Eltern, die Beziehungsqualität der Partner, sowie die affektive und kognitive Ausstattung des Kindes selbst. 
 
 \begin{figure}%[htbp] -> am Schluss fürs Feintuning :-)
   \centering
      \includegraphics[width=1.0\textwidth]{content/Grafik/Infografik_ElternKindBeziehung_Uebersicht.png}
-  \caption{TBD: Infografik: Eltern-Kind-Beziehung}
+  \caption{Infografik: Eltern-Kind-Beziehung}
   \label{fig:InfografikElternKindBeziehung}
 \end{figure}
 
@@ -15,17 +15,17 @@ Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundl
 \subsubsection{Eltern-Kind-Interaktion}\label{sec:Interaktion}
 Grundsätzlich ist der Mensch gemäss \citeA[S.~91]{Resch1999} in ein Gefüge von zwischenmenschlichen Relationen eingebettet, welche einen wesentlichen Einfluss auf das innerer Weltverständnis und das Selbstbild nehmen.  Die frühe Kindheit stellt eine kritische Periode in der Entwicklung dar, wobei die wichtigste frühe Umgebung des Kindes die Familie, resp. das primäre Umfeld, ist (vgl. ebd., S. 92ff.). Wird die Familie im Entwicklungskontext angeschaut, so kann der elterliche Einfluss auf das Kind durch die zwei Begriffe \textit{Beziehung} und \textit{Erziehung} definiert werden. Dadurch weist die Eltern-Kind-Beziehung immer Beziehungsqualitäten und Erziehungsqualitäten auf.  
 
-Auch \textit{kindliche Faktoren} beeinflussen die frühen Interaktionen deutlich. Das Kind ist schon sehr früh in der Lage, selektiv und adäquat auf die emotionale Ausdrucksform der Bezugsperson einzugehen \cite{Harris1994}. Dabei haben Kinder im Säuglingsalter von der Bezugsperson die Erwartung, dass diese adäquat auf die Gefühlsausdrücke reagiert. Dies ermöglicht bereits dem Säugling einen Informationsaustausch zu seiner Bezugsperson. Somit ist ein Säugling in der Lage, sich anhand dem emotionalen Ausdruck der Bezugsperson anzunähern oder es bleiben zu lassen \cite{Resch1999}. Dieser Vorgang wird als \textit{soziale Vergewisserung (engl. social referencing)} bezeichnet und meint damit, dass ein Kind nach der Beantwortung seiner affektiven Gestimmtheit sucht, wenn es sich seiner Bezugsperson zuwendet. Es konsultiert den Gesichtsausdruck der Bezugsperson, um über die Bedeutung eines ihm unbekannten Ereignisses eine Sinnszuschreibung \textit{(engl. meaning attribution)} zu erhalten. Diese frühen affektiven Regulatoren der Interaktion dienen der Entwicklung des kindlichen Interessens und des kindlichen Bewertungsschemas. Je nach emotionalem Ausutausch wird das Kind eine Kohärenz in seinen Erwartungen entwickeln oder nicht. Wenn die kindlichen emotionalen Signale adäquat beantwortet werden, entsteht eine günstige Basis des Erfahrungslernens \cite[S.~95]{Resch1999}. Die emotionale Kommunikation konstituiert das kindliche Weltbild in Form von Selbst- und Objektrepräsentanzen. Inkonsistente emotionale Kommunikation führt zu einem weniger köhärenten und weniger vorhersagbaren inneren Schemata der Welt. 
+Auch \textit{kindliche Faktoren} beeinflussen die frühen Interaktionen deutlich. Das Kind ist schon sehr früh in der Lage, selektiv und adäquat auf die emotionale Ausdrucksform der Bezugsperson einzugehen \cite{Harris1994}. Dabei haben Kinder im Säuglingsalter von der Bezugsperson die Erwartung, dass diese adäquat auf die Gefühlsausdrücke reagiert. Dies ermöglicht bereits dem Säugling einen Informationsaustausch zu seiner Bezugsperson. Somit ist ein Säugling in der Lage, sich anhand dem emotionalen Ausdruck der Bezugsperson anzunähern oder es bleiben zu lassen \cite{Resch1999}. Dieser Vorgang wird als \textit{soziale Vergewisserung (engl. social referencing)} bezeichnet und meint damit, dass ein Kind nach der Beantwortung seiner affektiven Gestimmtheit sucht, wenn es sich seiner Bezugsperson zuwendet. Es konsultiert den Gesichtsausdruck der Bezugsperson, um über die Bedeutung eines ihm unbekannten Ereignisses eine Sinnzuschreibung \textit{(engl. meaning attribution)} zu erhalten. Diese frühen affektiven Regulatoren der Interaktion dienen der Entwicklung des kindlichen Interessens und des kindlichen Bewertungsschemas. Je nach emotionalem Austausch wird das Kind eine Kohärenz in seinen Erwartungen entwickeln oder nicht. Wenn die kindlichen emotionalen Signale adäquat beantwortet werden, entsteht eine günstige Basis des Erfahrungslernens \cite[S.~95]{Resch1999}. Die emotionale Kommunikation konstituiert das kindliche Weltbild in Form von Selbst- und Objektrepräsentanzen. Inkonsistente emotionale Kommunikation führt zu einem weniger köhärenten und weniger vorhersagbaren inneren Schemata der Welt. 
 
-Ein weiterer Interaktionsfaktor stellt die \textit{Induktion} aus der empirischen Säuglingsforschung dar. Kindliche Gefühlszustände und Verhaltensmuster werden durch elterliche Verhaltensmuster induziert \cite{Cummings1994}. Intrusive feindliche und unsensitive Elternreaktionen können einen negativen Erregnungsprozess im Kind auslösen, woraus sich ungünstige Interferenzen mit den sich entwickelnden Fähigkeiten des Kindes ergeben, seine eigenen Erregungsimpulse zu modulieren und zu regulieren.  
+Ein weiterer Interaktionsfaktor stellt die \textit{Induktion} aus der empirischen Säuglingsforschung dar. Kindliche Gefühlszustände und Verhaltensmuster werden durch elterliche Verhaltensmuster induziert \cite{Cummings1994}. Intrusive feindliche und unsensitive Elternreaktionen können einen negativen Erregungsprozess im Kind auslösen, woraus sich ungünstige Interferenzen mit den sich entwickelnden Fähigkeiten des Kindes ergeben, seine eigenen Erregungsimpulse zu modulieren und zu regulieren.  
 
-Über Imitationsprozesse kann die \textit{Modellbildung} im Kind durch das elterliche Verhalten beeinflusst werden. Elterliche Verhaltensweisen und Sichtweisen gegenüber der Welt werden internalisiert \cite{Resch1999}. Die Eltertn ebeeinflussen die Entwicklung des Kindes nicht nur als direkte Akteure, sondern eben auch durch ihre Vorbildfunktion. 
+Über Imitationsprozesse kann die \textit{Modellbildung} im Kind durch das elterliche Verhalten beeinflusst werden. Elterliche Verhaltensweisen und Sichtweisen gegenüber der Welt werden internalisiert \cite{Resch1999}. Die Eltern beeinflussen die Entwicklung des Kindes nicht nur als direkte Akteure, sondern eben auch durch ihre Vorbildfunktion. 
 
-Durch die frühe Interaktion mit einer Bezugsperson wird auch die interaktionelle \textit{Affektregulation} geprägt. Nach \citeA{Dornes1993, Dornes1997} werden in den frühen Interaktionen zwischen Mutter und Kind affekthaltige Handlungen ausgetauscht. Das Kind kann seine innere Erfahrung mit einem anderen Menschen teilen und mit diesem darüber Kommunizieren. Eine Form dieser affektiven Kommunikation wird gemäss \citeA{Stern1985} als \textit{Affektabstimmung (engl. affective attunement)} bezeichnet. Dabei wird auf bestimmte Gefühlsäusserungen des Kindes von Seiten der Mutter differenziert geantwortet, wobei die Antwort etwas stärker oder schwächer als die des Kindes ausfällt. Durch gezieltes Abdämpfen oder Stimulieren der kindlichen Gefühslausdrücke und Aktionen können Erlebnis- und Handlugsfolgen akzentuiert, abgedämpft oder sogar gelöscht werden. Reagiert eine Bezugsperson unsensibel auf das Kind und werden Handlungsintentionen immer wieder unterbrochen, so kann sich dies negativ auf die Entwicklung des Kindes auswirken \cite{Resch1999}.
+Durch die frühe Interaktion mit einer Bezugsperson wird auch die interaktionelle \textit{Affektregulation} geprägt. Nach \citeA{Dornes1993, Dornes1997} werden in den frühen Interaktionen zwischen Mutter und Kind affekthaltige Handlungen ausgetauscht. Das Kind kann seine innere Erfahrung mit einem anderen Menschen teilen und mit diesem darüber Kommunizieren. Eine Form dieser affektiven Kommunikation wird gemäss \citeA{Stern1985} als \textit{Affektabstimmung (engl. affective attunement)} bezeichnet. Dabei wird auf bestimmte Gefühlsäusserungen des Kindes von Seiten der Mutter differenziert geantwortet, wobei die Antwort etwas stärker oder schwächer als die des Kindes ausfällt. Durch gezieltes Abdämpfen oder Stimulieren der kindlichen Gefühlsausdrücke und Aktionen können Erlebnis- und Handlungsfolgen akzentuiert, abgedämpft oder sogar gelöscht werden. Reagiert eine Bezugsperson unsensibel auf das Kind und werden Handlungsintentionen immer wieder unterbrochen, so kann sich dies negativ auf die Entwicklung des Kindes auswirken \cite{Resch1999}.
 
 Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontingenz} genannt. Gemeint ist dabei die regelhafte Aufeinanderfolge einzelnen Verhaltensschritte. Die Wichtigkeit kontingenter Beantwortung kindlicher Signale, vor allem in der Anfangsphase der Eltern-Kind-Beziehung, betont \citeA{Papousek1987, Papousek1989}. Kontingenz bedeutet dabei die zeitliche und inhaltliche Passung der elterlichen Reaktion auf das Verhalten des Kindes, also die zeitliche Folge der Reaktion und die inhaltliche Entsprechung. Diese frühe Verständigung zwischen Eltern und Kind würde nicht gelingen, wenn die Eltern nicht kompensatorisch an die begrenzte kindlichen Voraussetzungen anpassen würden. Diese Fähigkeit schafft die Voraussetzung für eine gelingende Kommunikation mit dem Säugling im vorsprachlichen Alter. Kontingentes Antworten von Seiten der Eltern ermöglicht eine Kohärenz der Interaktion, die zum subjektiven Gefühl der Kontrolle beim Kind führt.
 
-\textit{Erziehungsstile} sind Verhaltensweisen und Einstellungen, die das emotionale Klima für die Eltern-Kind-Interaktion bestimmen \cite[S.~649]{Siegler2008}. Um den Einfluss den Eltern auf die Entwicklung von Kindern nehmen können, wurden zwei Dimensionen des Erziehungsstils identifiziert: (1) das Ausmass an elterlichen Wärme, Unterstützung und Akzeptanz, und (2) das Ausmass an elterlicher Kontrolle und Anforderung \cite{Maccoby1983}. Diese Aspekte der der elterlichen Erziehung scheinen eine wichtige Rolle bei der Ausbildung interindividueller Unterschiede zwischen Kindern zu spielen. \citeA{Baumrind1973} entwickelte anhand der Dimensionen Unterstützung und Kontrolle vier Erziehungsstile: autoritativ, autoritär, permissiv und vernachlässigend-zurückweisend \cite{Baumrind1991}. Nach dieser Typologie neigen \textbf{autoritative} Eltern dazu Anforderungen zu stellen, aber auch auf das Kind einzugehen und warmherzig zu sein. Gemäss \citeA{Baumrind1991} sind Kinder autoritativer Eltern häufig kompetent, selbstbewusst und bei ihren Altersgenossen beliebt. Als Jugendliche besitzen sie häufig hohe soziale und schulische Fähigkeiten, Selbstvertrauen und positive Verhaltensweisen \cite{Lamborn1991}. \textbf{Autoritäre} Eltern sind oft kalt und reagieren nicht auf die Bedürfnisse ihrer Kinder. Des Weiteren üben sie starke Kontrolle aus und stellen hohe Anforderungen. Forderungen an die Kinder erzwingen sie oft durch Ausüben ihrer elterlichen Macht. Kinder autoritärer Eltern besitzen oft relativ geringe soziale und schilische Kompetenzen, sind unglücklich und unfreundlich und besitzen ein geringes Selbstvertrauen. Im Jugendalter wirkt sich dies auf eine geringere soziale und schulische Kompetenz im Vergleich zu Kindern autoritätiver Eltern aus \cite{Baumrind1991, Lamborn1991}.  \textbf{Permissive} Eltern reagieren auf die Bedürfnisse und Wünsche ihrer Kinder und sind nachsichtig. Sie sind nicht konservativ und verlangen von ihren Kindern nicht sich selbst zu regulieren. Kinder permissiver Eltern sind häufig impulsiv, es fehlt ihnen an Slebstbeherrschung und zeigen oft schawache schulische Leistungen \cite{Baumrind1991}. Als Jugendliche fallen sie durch häufigen Drogenkonsum und schlechtes Benehmen gegenüber Kindern autoritativer Eltern auf \cite{Lamborn1991}. \textbf{Zurückweisend-vernachlässigende} Eltern sind uninteressierte Eltern, die wenig Anforderungen stellen und auch wenig auf sie reagieren. Sie setzen dem Verhalten der Kinder keine Grenzen und kontrollieren es auch nicht. Säuglinge und Kleinkinder zurückweisend-vernachlässigender Eltern weisen häufig gestörte Bindungsbeziehungen und Probleme in der Beziehungsgestaltung zu ihren Altersgenossen auf \cite{Parke1998}.
+\textit{Erziehungsstile} sind Verhaltensweisen und Einstellungen, die das emotionale Klima für die Eltern-Kind-Interaktion bestimmen \cite[S.~649]{Siegler2008}. Um den Einfluss den Eltern auf die Entwicklung von Kindern nehmen können, wurden zwei Dimensionen des Erziehungsstils identifiziert: (1) das Ausmass an elterlichen Wärme, Unterstützung und Akzeptanz, und (2) das Ausmass an elterlicher Kontrolle und Anforderung \cite{Maccoby1983}. Diese Aspekte der der elterlichen Erziehung scheinen eine wichtige Rolle bei der Ausbildung interindividueller Unterschiede zwischen Kindern zu spielen. \citeA{Baumrind1973} entwickelte anhand der Dimensionen Unterstützung und Kontrolle vier Erziehungsstile: autoritativ, autoritär, permissiv und vernachlässigend-zurückweisend \cite{Baumrind1991}. Nach dieser Typologie neigen \textbf{autoritative} Eltern dazu Anforderungen zu stellen, aber auch auf das Kind einzugehen und warmherzig zu sein. Gemäss \citeA{Baumrind1991} sind Kinder autoritativer Eltern häufig kompetent, selbstbewusst und bei ihren Altersgenossen beliebt. Als Jugendliche besitzen sie häufig hohe soziale und schulische Fähigkeiten, Selbstvertrauen und positive Verhaltensweisen \cite{Lamborn1991}. \textbf{Autoritäre} Eltern sind oft kalt und reagieren nicht auf die Bedürfnisse ihrer Kinder. Des Weiteren üben sie starke Kontrolle aus und stellen hohe Anforderungen. Forderungen an die Kinder erzwingen sie oft durch Ausüben ihrer elterlichen Macht. Kinder autoritärer Eltern besitzen oft relativ geringe soziale und schulische Kompetenzen, sind unglücklich und unfreundlich und besitzen ein geringes Selbstvertrauen. Im Jugendalter wirkt sich dies auf eine geringere soziale und schulische Kompetenz im Vergleich zu Kindern autoritätiver Eltern aus \cite{Baumrind1991, Lamborn1991}.  \textbf{Permissive} Eltern reagieren auf die Bedürfnisse und Wünsche ihrer Kinder und sind nachsichtig. Sie sind nicht konservativ und verlangen von ihren Kindern nicht sich selbst zu regulieren. Kinder permissiver Eltern sind häufig impulsiv, es fehlt ihnen an Selbstbeherrschung und zeigen oft schwache schulische Leistungen \cite{Baumrind1991}. Als Jugendliche fallen sie durch häufigen Drogenkonsum und schlechtes Benehmen gegenüber Kindern autoritativer Eltern auf \cite{Lamborn1991}. \textbf{Zurückweisend-vernachlässigende} Eltern sind uninteressierte Eltern, die wenig Anforderungen stellen und auch wenig auf sie reagieren. Sie setzen dem Verhalten der Kinder keine Grenzen und kontrollieren es auch nicht. Säuglinge und Kleinkinder zurückweisend-vernachlässigender Eltern weisen häufig gestörte Bindungsbeziehungen und Probleme in der Beziehungsgestaltung zu ihren Altersgenossen auf \cite{Parke1998}.
 
 
 \subsubsection{Entwicklungsaufgaben der Kinder}\label{sec:Entwicklungsaufgaben} Über die Enticklungsaufgaben der Kinder lassen sich ganze Bücher schreiben. Es sind deren zahlreiche geschrieben worden und der Rahmen dieser Arbeit würde gesprengt werden, müssten hier alle Ansätze und Theorien Platz finden. Aus diesem Grund wurde eine Auswahl getroffen, die keinen Anspruch auf Vollständigkeit erhebt und doch die scheinbar relevantesten im Bereich der Eltern-Kind-Beziehung unter dem Fokus der Interaktion näher beleuchtet. Dadurch soll dem Anspruch genüge getan werden, wichtige theoretische Inputs für die Klärung der Forschungsfrage dieser Arbeit zu liefern. Zum Beispiel wird die körperliche Entwicklung, wenn auch eine wichtige Aufgabe eines Kindes, hier nicht weiter behandelt, da die Schnittpunkte zum Forschungsthema zu gering ausfallen.
@@ -33,7 +33,7 @@ Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontinge
 \paragraph{Kognitiven Entwicklung}\label{par:KognitiveEntwicklung}
 Bei der \textit{kognitiven Entwicklung} spielen die sozio-kulturellen Theorien eine wichtige Rolle im Eltern-Kind-Gefüge. Dabei handelt es sich um Theorien, die die Bedeutung der Interaktion zwischen Kindern und andern Menschen zusammen mit der umgebenden Kultur ins Zentrum für die Entwicklung der Kinder rücken \cite[S.~225ff]{Siegler2008}. Als Beispiel für eine sozio-kulturelle Theorie kann die \textit{gelenkte Partizipation} genommen werden. Darunter wird ein Prozess verstanden, bei dem als Experten geltende Erwachsene ihre Aktivität so gestalten, dass sich Menschen mit geringeren Kenntnissen - in diesem Fall die Kinder - an diesen beteiligen können, obwohl sie von sich aus dazu noch nicht fähig sind und daraus etwas lernen können \cite{Rogoff1990}. Die gelenkte Partizipation dient oft der Erreichung eines praktischen Ziels, wie dem Zusammenbauen eines Autos. Das Lernen ist dabei ein Nebenprodukt der Tätigkeit.
 
-Weiter ist die Interaktion zwischen den Eltern und dem Kind in der Einbettung des kulturellen Kontext für die Entwicklung wichtig. Es gehören nicht nur andere Menschen dazu, sondern auch die zahlreichen Prudukte der menschlichen Erfindungskraft, die als sogenannte Kulturwerkzeuge bezeichnet werden. Dazu gelten Symbolsysteme, Artefakte, Fähigkeiten und Werte \cite[S.~226]{Siegler2008}. Gemäss Wygotski, ein russischer Psychologe und Zeitgenosse von Piaget, sind Kinder soziale Wesen, geformt durch ihren kulturellen Kontext, den sie auch selbst wiederum mitgestalten (vgl. ebd. S.~227). 
+Weiter ist die Interaktion zwischen den Eltern und dem Kind in der Einbettung des kulturellen Kontext für die Entwicklung wichtig. Es gehören nicht nur andere Menschen dazu, sondern auch die zahlreichen Produkte der menschlichen Erfindungskraft, die als sogenannte Kulturwerkzeuge bezeichnet werden. Dazu gelten Symbolsysteme, Artefakte, Fähigkeiten und Werte \cite[S.~226]{Siegler2008}. Gemäss Wygotski, ein russischer Psychologe und Zeitgenosse von Piaget, sind Kinder soziale Wesen, geformt durch ihren kulturellen Kontext, den sie auch selbst wiederum mitgestalten (vgl. ebd. S.~227). 
 
 Als Grundlage der kognitiven Entwicklung des Menschen gelten gemäss sozio-kulturellen Theoretikern in der Fähigkeit, \textit{Intersubjektivität} herzustellen. Das wechselseitige Verständnis, das Menschen bei der Kommunikation füreinander aufbringen \cite{Gauvain2001, Rogoff1990}. Dabei gilt, dass für eine effektive Verständigung, sich die Beteiligten auf dasselbe Thema konzentrieren und ebenso auf die Reaktion des andern achten müssen. Dazu ist ein wirksames Lehren und Lernen unverzichtbar. Zwei bis drei monatige Säuglingen sind lebhafter und interessierter, wenn die Bezugsperson auf ihre Aktionen reagiert \cite{Murray1985}. Sechs monatige Kinder können neue Verhaltensweisen allein durch die Beobachtung des Verhalten anderer Menschen erlernen \cite{Collie1999}. Im Zentrum der Intersubjektivität steht die \textit{geteilte Aufmerksamkeit (engl. joint attention)}, welches ein Prozess beschreibt, bei dem die sozialen Partner ihre Aufmerksamkeit intendiert auf einen gemeinsamen Gegenstand richten in der äusseren Umwelt. Zum Beispiel schauen die Kinder im Alter zwischen neun und 15 Monaten zunehmend auf dieselben Gegenstände wie ihre Sozialpartner und richten die Aufmerksamkeit von Erwachsenen aktiv auf Objekte, die sie selber interessieren \cite{Adamson1991, Gauvain2001}. Diese gemeinsame Aufmerksamkeit spielt eine wichtige Rolle bei der frühen Sprachentwicklung \cite[S.~232]{Berk2011}. Eine verwandte Verhaltensweise (\prettyref{sec:Interaktion}) ist das \textit{soziale Referenzieren (engl. social referencing)}, ein Verhalten, um vom Sozialpartner einen Rat oder eine Anleitung für eine unbekannte oder bedrohliche Situation zu bekommen, indem dieser angeschaut wird \cite{Campos1981}. 
 
@@ -44,12 +44,12 @@ Theorien sozialer Entwicklung versuchen zu erklären, wie Menschen und soziale I
 
 Im Gebiet der Lerntheorien soll für diese Arbeit vor allem die Theorie des \textit{sozialen Lernens} hervorgehoben werden. Diese versucht die Persönlichkeit und andere Aspekte der sozialen Entwicklung anhand von Lernmechanismen zu erklären, wobei die Beobachtung und Nachahmung als Mechanismen im Zentrum stehen. \citeA{Bandura1979, Bandura1986} gibt an, dass der grösste Teil des menschlichen Lernens sozialer Natur sei und auf der Beobachtung des Verhaltens anderer Menschen beruhe. Kinder würden am schnellsten lernen, indem sie anderen Menschen zuschauen und sie anschliessend imitieren \cite[S.~482ff]{Siegler2008}. Im Gegensatz zu den meisten anderen Lerntheoretikern betont Bandura die aktive Rolle der Kindern in ihrer Umwelt und Entwicklung als reziproken Determinismus zwischen ihnen und ihrer sozialen Umwelt. Kinder werden durch die Umweltaspekte beeinflusst, beeinflussen aber auch selbst die Umwelt (ebd.). 
 
-Die Theorien der \textit{sozialen Kognition} befassen sich mit der Fähigkeit von Kindern, über Gefühle, Gedanken, Motive und Verhaltensweisen bei sich und anderer Menschen nachzudenken und daraus Schlüsse zu ziehen \cite[S.~486ff]{Siegler2008}. Somit umfasst die soziale Kognition alle Leistungen, die Aufschluss über die psychische Verfassung eines Anderen liefern \cite[S.~237ff]{Bischof2011}. Kinder verarbeiten soziale Informationen aktiv. Dabei achten sie darauf was andere Menschen sagen und tun, ziehen daraus permanten Schlüsse, nehmen Interpretationen vor und konstruieren Erklärungen \cite{Siegler2008}. Die soziale Kompetenz im ersten Lebensjahr beruht im Wesentlichen auf emotionalem Erleben, indem auf soziale Situationen mit angemessenen Emotionen reagiert wird. Die Emotionen dienen somit als Grundlage der sozialen Kognition bei Säuglingen \cite{Bischof2011}. Bereits Neugebohrene lassen sich vom Geschrei anderer Babys anstecken \cite{Simner1971}. Die Reaktion erfolgt auf die menschliche Stimme und nicht etwa auf das Geräusch, was mit dem Begriff \textit{Gefühlsansteckung (engl. sharing of emotion)} gemäss \citeA{Tomasello2005} umschreiben wird.
+Die Theorien der \textit{sozialen Kognition} befassen sich mit der Fähigkeit von Kindern, über Gefühle, Gedanken, Motive und Verhaltensweisen bei sich und anderer Menschen nachzudenken und daraus Schlüsse zu ziehen \cite[S.~486ff]{Siegler2008}. Somit umfasst die soziale Kognition alle Leistungen, die Aufschluss über die psychische Verfassung eines Anderen liefern \cite[S.~237ff]{Bischof2011}. Kinder verarbeiten soziale Informationen aktiv. Dabei achten sie darauf was andere Menschen sagen und tun, ziehen daraus permanten Schlüsse, nehmen Interpretationen vor und konstruieren Erklärungen \cite{Siegler2008}. Die soziale Kompetenz im ersten Lebensjahr beruht im Wesentlichen auf emotionalem Erleben, indem auf soziale Situationen mit angemessenen Emotionen reagiert wird. Die Emotionen dienen somit als Grundlage der sozialen Kognition bei Säuglingen \cite{Bischof2011}. Bereits Neugeborene lassen sich vom Geschrei anderer Babys anstecken \cite{Simner1971}. Die Reaktion erfolgt auf die menschliche Stimme und nicht etwa auf das Geräusch, was mit dem Begriff \textit{Gefühlsansteckung (engl. sharing of emotion)} gemäss \citeA{Tomasello2005} umschreiben wird.
 
 Zusammenfassend kann gesagt werden, dass die Entwicklungsaufgaben bezüglich sozialer Entwicklung Vertrauen und Autonomie aufzubauen sind. Dies gelingt besonders gut in einer warmherzigen und einfühlsamen Beziehung zwischen Eltern und Kind \cite[S.~224]{Berk2011}.
 
 \paragraph{Emotionale Entwicklung}\label{par:EmotionaleEntwicklung}
-Emotionen sind durch ihre motivationale Kraft oder Handlungstendenz gekennzeichnet. Sie werden von Funktionalisten als der Versuch oder die Bereitschaft definiert, eine Beziehung mit der Umwelt hinsichtlich relevanter Apslekte herzustellen \cite[S.~529ff]{Siegler2008}. Emotionen sind von grundlegender Bedeutung für die Organisation von Fähigkeiten wie der Aufbau von Beziehungen, die Erkundung der Umwelt und die Entdeckung des eigenen Selbst \cite{Halle2003, Saarni2006}. Grundemotionen wie Freude, Furcht (Angst), Ärger (Wut) und Traurigkeit sind bei Menschen unviversell. Die frühe Gefühlslage eines Säuglings besteht aus wenig mehr als zwei umfassende Erregunszustände: einem sich zu einem angenehmen Stimuli hingezogenen und einem von unangenehmen Stimuli zurückziehenden \cite{Camras2003, Fox1991}. Erst mit der Zeit entwickeln sich Emotionen zu deutlicheren Zeichen. Sensible und passende Kommunikation von Eltern, bei der sie auf einzelne Aspekte des undifferenzierten emotionalen Verhaltens eines Säuglings eingehen, helfen dem Kind emotionale Ausdrucksformen zu entwickeln \cite{Gergely1999}. Eltern, die für die Signale ihrer Kinder wenig empfänglich sind, rufen bei ihren Kindern häufig traurige Gesichter, unklare Verbalisierungen, einen zusammensinkenden Körper, ein ärgerliches Gesicht oder Weinen und "nimm-mich-auf-den-Arm"-Gesten hervor \cite{Weinberg1994, Yale1999}. Bis in die Mitte des ersten Lebensjahr sind emotionale Ausdrucksformen bereits gut organisiert und spezifisch, die viel über das innere Befinden des Kindes aussagen \cite{Berk2011}. Wenn die Kommunikation zwischen Bezugsperson und Säugling ernsthaft gestört ist, kann häufig Traurigkeit auf Seiten des Säuglings beobachtet werden. Dies kann zum Beispiel bei einer depressiven Mutter oder eines depressiven Vaters geschehen, da die Fürsorge für ihr Kind beeinträchtigt ist und die Entwicklung erheblich stören kann.
+Emotionen sind durch ihre motivationale Kraft oder Handlungstendenz gekennzeichnet. Sie werden von Funktionalisten als der Versuch oder die Bereitschaft definiert, eine Beziehung mit der Umwelt hinsichtlich relevanter Aspekte herzustellen \cite[S.~529ff]{Siegler2008}. Emotionen sind von grundlegender Bedeutung für die Organisation von Fähigkeiten wie der Aufbau von Beziehungen, die Erkundung der Umwelt und die Entdeckung des eigenen Selbst \cite{Halle2003, Saarni2006}. Grundemotionen wie Freude, Furcht (Angst), Ärger (Wut) und Traurigkeit sind bei Menschen unviversell. Die frühe Gefühlslage eines Säuglings besteht aus wenig mehr als zwei umfassende Erregunszustände: einem sich zu einem angenehmen Stimuli hingezogenen und einem von unangenehmen Stimuli zurückziehenden \cite{Camras2003, Fox1991}. Erst mit der Zeit entwickeln sich Emotionen zu deutlicheren Zeichen. Sensible und passende Kommunikation von Eltern, bei der sie auf einzelne Aspekte des undifferenzierten emotionalen Verhaltens eines Säuglings eingehen, helfen dem Kind emotionale Ausdrucksformen zu entwickeln \cite{Gergely1999}. Eltern, die für die Signale ihrer Kinder wenig empfänglich sind, rufen bei ihren Kindern häufig traurige Gesichter, unklare Verbalisierungen, einen zusammensinkenden Körper, ein ärgerliches Gesicht oder Weinen und "nimm-mich-auf-den-Arm"-Gesten hervor \cite{Weinberg1994, Yale1999}. Bis in die Mitte des ersten Lebensjahr sind emotionale Ausdrucksformen bereits gut organisiert und spezifisch, die viel über das innere Befinden des Kindes aussagen \cite{Berk2011}. Wenn die Kommunikation zwischen Bezugsperson und Säugling ernsthaft gestört ist, kann häufig Traurigkeit auf Seiten des Säuglings beobachtet werden. Dies kann zum Beispiel bei einer depressiven Mutter oder eines depressiven Vaters geschehen, da die Fürsorge für ihr Kind beeinträchtigt ist und die Entwicklung erheblich stören kann.
 
 Die \textit{emotionale Selbstregulierung} bezeichnet die Fähigkeit, innerer Gefühlszustände zu initiieren, zu hemmen oder zu modulieren, um ein Ziel zu erreichen \cite{Siegler2008}. In den ersten Lebensmonaten helfen Eltern ihren Kindern ihre emotionale Erregung zu regulieren, indem sie kontrollieren, wie stark diese den stimulierenden Ereignissen ausgesetzt sind \cite{Gianino1988}. Ein Säugling ist weniger empfindlich, äussert häufig angenehme Emotionen, erkundet sein Umfeld interessierter und ist leichter zu beruhigen, wenn dessen Eltern angemessen und liebevoll auf seine Hinweisreize reagieren \cite{Crockenberg2004}. Bezugspersonen, die gefühlsbelastenden Erlebnissen des Kindes unzureichend regulieren, riskieren, dass sich Gehirnstrukturen unzureichend entwickeln, welche für Stressregulierung dienen \cite[S.~250]{Berk2011}. Ab dem achten Monat beginnt der Säugling mit der sozialen Bezugnahme, er sucht aktiv nach emotional bewertenden Informationen von einem ihm vertrauten Person \cite{Mumme2007}. Im Allgemein geht die soziale Selbstregulierung mit einer höheren sozialen Kompetenz und einem geringeren Problemverhalten einher \cite[S.~580]{Siegler2008}. 
 
@@ -71,7 +71,7 @@ Das \textit{Selbstwertgefühl} ist ein wichtiges Element des Selbstkonzepts und 
 
 % ---------------------------------------
 \subsection{TBD: Medienverhalten der Eltern}\label{sec:Medienverhalten}
-Unter dem Medienverhalten der Eltern laufen viele Faktoren zusammen. Wie bereits erläutert, definiert sich das Ziel dieser Arbeit das Medienverhalten der Eltern unter dem Gesichtspunkt der Bindung, dem Stress und dem subjektiven Wohlbefinden zu betrachten. Diese theoretischen Konstrukte werden im Folgenden, für die in dieser Arbeit notwendigen Tiefe, behandelt.
+Unter dem Medienverhalten der Eltern laufen viele Faktoren zusammen. Wie bereits erläutert, definiert sich diese Arbeit über das Medienverhalten der Eltern und soll unter dem Gesichtspunkt der Bindung, dem Stress und dem subjektiven Wohlbefinden betrachtet werden. Diese theoretischen Konstrukte werden im Folgenden für die in dieser Arbeit notwendigen Tiefe behandelt.
 % ---------------------------------------
 \subsubsection{TBD: Bindung}\label{sec:Bindung}
 
