Sec: Methode - Versuchssituation geschildert.

--- a/main.tex
+++ b/main.tex
@@ -56,12 +56,9 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \setcounter{page}{1}
 \pagenumbering{arabic}
 
-% Einleitung
-\section{Hintergrund, Begründung und Ziel der Studie}\label{sec:Einleitung}
+% Einleitende Theorie
+\section{Einleitende Theorie}\label{sec:EinleitendeTheorie}
 \input{content/0_Einleitung.tex}
-
-% Theorie
-\section{Theorie}\label{sec:Theorie}
 \input{content/1_theorie.tex}
 
 % Methode
