--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -1,10 +1,21 @@
 % ---------------------------------------
-\subsection{Design \& Operationalisiserung} \label{sec:Design}
-Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Die Generierung der Daten für die Beantwortung der Fragestellung erfolgte mittels Internet-Fragebogen. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte. 
+\subsection{Versuchssituation}\label{sec:Versuchssituation}
+Die Durchführung dieser Arbeit erfolgte im Rahmen einer Masterarbeit an der Zürcher Hochschule für Angewandte Wissenschaften (ZHAW) im Studiengang Angewandte Psychologie in der Vertiefung klinische Psychologie im Frühlingssemester 2018. Dieser Arbeit ging die Wahl des Themas und des Dozenten mittels Disposition im Herbstsemester 2017 voraus. Darin wurde anhand aktueller theoretischer Ansätze und der bisherigen Forschung (siehe auch Kap. \titleref{sec:Hintergrund}) das Vorgehen und das Design vordefiniert und zusammen mit dem betreuenden Dozenten besprochen. 
 
-Diese Studie verfolgte das Ziel, mögliche Tendenzen aufzuzeigen. Durch die Befragung einer spezifischen Bevölkerungsgruppe können die Resultate nicht auf die Gesamtbevölkerung verallgemeinert werden und dienen einer exemplarischen Betrachtung.
+In einem ersten Schritt wurde, basierend auf der theoretischen Vorarbeit, ein standardisierter Fragebogen anhand der für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten} und \textit{subjektives Wohlbefinden}, sowie der soziodemografischen Daten zusammengestellt. Dazu wurden soweit als möglich bereits normierte und validierte Instrumente oder Teile aus bereits existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch über das Internet und setze sich aus einer kurzen Erläuterung der Studie, sowie entsprechende Anweisungen zur Beantwortung der Fragen und den ausgewählten Erhebungsinstrumenten zusammen. 
+
+\textit{TBD: Versuchsablauf schildern}
+
+Die Aufschaltdauer der Umfrage dauerte knapp 5 Monate, von Mitte Januar bis Ende Mai 2018. In diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde anhand der bereinigten Daten die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
+
+Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 2017 bis zur Fertigstellung der Masterarbeit Ende Frühlingssemster 2018 zwei Semester und wurde Ende July 2018 zur Validierung eingereicht.
+
+% ---------------------------------------
+\subsection{Design \& Operationalisiserung} \label{sec:Design}
+Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Die Generierung der Daten für die Beantwortung der Fragestellung erfolgte mittels Internet-Fragebogen. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte.
+
 
 \subsection{Datenerhebung}
 \subsection{Beschreibung der Stichprobe}
-\subsection{Empirische Hypothesen}
+\subsection{Empirische Hypothesen}\label{sec:EmpirischeHypothesen}
 \subsection{Statistische Analyseverfahren}
