sec:Methode: Struktur für Operationalisierung angepasst

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -14,6 +14,12 @@ Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 
 \subsection{Design \& Operationalisiserung} \label{sec:Design}
 Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Die Generierung der Daten für die Beantwortung der Fragestellung erfolgte mittels Internet-Fragebogen. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte.
 
+\subsubsection{Soziodemografische Daten}
+\subsubsection{Medien und Mediennutzung}
+\subsubsection{Bindung: Adult Attachment Scale (AAS)}
+\subsubsection{Stress: Perceived Stress Questionnaire (PSQ)}
+\subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}
+
 
 \subsection{Datenerhebung}
 \subsection{Beschreibung der Stichprobe}
