sec:Methode - Ablauf und Anhang Fragebogen

--- a/main.tex
+++ b/main.tex
@@ -79,8 +79,21 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 \bibliography{library}{}
 \end{flushleft}
 
+\newpage
 
 % Anhang
+%\pagenumbering{arabic}
+\pagenumbering{Roman}
+\appendix 
+\renewcommand{\appendixname}{Anhang} 
+
+% Fragebogen
+\section{Fragebogen}\label{app:Fragebogen}
+\input{content/Anhang/Umfragebogen.tex}
+
+% Flyer für die Rekrutierung
+\section{Flyer}\label{app:Flyer}
+\input{content/Anhang/Flyer.tex}
 
 % Ehrenwörtliche Erklärung
 
