--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -4,11 +4,12 @@ Die Durchführung dieser Arbeit erfolgte im Rahmen einer Masterarbeit an der Zü
 
 In einem ersten Schritt wurde, basierend auf der theoretischen Vorarbeit, ein standardisierter Fragebogen anhand der für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten} und \textit{subjektives Wohlbefinden}, sowie der soziodemografischen Daten zusammengestellt. Dazu wurden soweit als möglich bereits normierte und validierte Instrumente oder Teile aus bereits existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch über das Internet und setze sich aus einer kurzen Erläuterung der Studie, sowie entsprechende Anweisungen zur Beantwortung der Fragen und den ausgewählten Erhebungsinstrumenten zusammen. 
 
+Die Umsetzung des Fragebogens richtete sich an die Möglichkeiten der Umfragesoftware Enterprise Feedback Suite Version 10.9 der Firma Questback GmbH. Ein Auszug des Fragebogens ist in angepasster Form im Anhang \titleref{app:Fragebogen} zu finden. 
 \textit{TBD: Versuchsablauf schildern (Kompletter Fragebogen in den Anhang)}
 
 Die Aufschaltdauer der Umfrage dauerte knapp 5 Monate, von Mitte Januar bis Ende Mai 2018. In diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde anhand der bereinigten Daten die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
 
-Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 2017 bis zur Fertigstellung der Masterarbeit Ende Frühlingssemster 2018 zwei Semester und wurde Ende July 2018 zur Validierung eingereicht.
+Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 2017 bis zur Fertigstellung der Masterarbeit Ende Frühlingssemster 2018 zwei Semester und wurde Ende July 2018 zur Bewertung eingereicht.
 
 % ---------------------------------------
 \subsection{Design \& Operationalisiserung} \label{sec:Design}
