Sec Methode - Versuchssituation fertig

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -4,10 +4,9 @@ Die Durchführung dieser Arbeit erfolgte im Rahmen einer Masterarbeit an der Zü
 
 In einem ersten Schritt wurde, basierend auf der theoretischen Vorarbeit, ein standardisierter Fragebogen anhand der für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten} und \textit{subjektives Wohlbefinden}, sowie der soziodemografischen Daten zusammengestellt. Dazu wurden soweit als möglich bereits normierte und validierte Instrumente oder Teile aus bereits existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch über das Internet und setze sich aus einer kurzen Erläuterung der Studie, sowie entsprechende Anweisungen zur Beantwortung der Fragen und den ausgewählten Erhebungsinstrumenten zusammen. 
 
-Die Umsetzung des Fragebogens richtete sich an die Möglichkeiten der Umfragesoftware Enterprise Feedback Suite Version 10.9 der Firma Questback GmbH. Ein Auszug des Fragebogens ist in angepasster Form im Anhang \titleref{app:Fragebogen} zu finden. 
-\textit{TBD: Versuchsablauf schildern (Kompletter Fragebogen in den Anhang)}
+Die Umsetzung des Fragebogens richtete sich an die von der Umfragesoftware Enterprise Feedback Suite Version 10.9 der Firma Questback GmbH vorgegebenen Frageoptionen. Ein Auszug des Fragebogens ist in angepasster Form im Anhang \titleref{app:Fragebogen} zu finden. Gestartet wurde die Umfrage mit einer kurzen Einführung, mit der Anonymitätserklärung, dem Hinweis auf den Wettbewerb und die Versuchspersonenstunden. Danach folgten die einzelnen Erhebungsinstrumente, beginnend mit der Erfassung der demographischen Daten, gefolgt vom Mediennutzungs-Fragebogen, dem Bindungsfragebogen, dem Stressfragebogen und dem Fragebogen zum subjektiven Wohlbefinden. Am Ende der Befragung konnten sich die Teilnehmer für die Teilnahme an einem Wettbewerb oder dem Erhalt für Versuchspersonenstunden, wenn sie Studierende der ZHAW in Psychologie waren, entscheiden. Zudem mussten die Teilnehmen angeben, ob sie die Fragen seriös ausgefüllt hatten. Der Fragebogen wurde mittels Pretest auf seine Funktionalität hin überprüft und erfolgte in zwei Schritten. Einerseits erlaubte die Software eine elektronische Testung des Fragebogens auf Korrektheit betreffend der möglichen Antwortpfaden. Dabei ging es um die Auswählbarkeit der Frageoptionen und die Erreichbarkeit aller aufgestellter Frageitems. In einem weiteren Schritt wurden fünf willkürlich ausgewählte Testpersonen aus dem Bekanntenkreis des Autoren als Testpersonen rekrutiert, die den kompletten Umfragebogen durchspieltn. Damit sollte sichergestellt werden, dass die Fragen und deren Anweisungen verständlich formuliert wurden und die Beantwortung der Fragen möglich war. Vor der Aktivschaltung des Fragebogens wurden alle bis dahin erfassten Daten der Tester gelöscht und die gesamte Umfrage frisch initialisiert.
 
-Die Aufschaltdauer der Umfrage dauerte knapp 5 Monate, von Mitte Januar bis Ende Mai 2018. In diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde anhand der bereinigten Daten die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
+Die Aufschaltdauer der Umfrage dauerte knapp fünf Monate, von Mitte Januar bis Ende Mai 2018. In diesem Zeitraum fand die Rekrutierung und die Vorarbeit für die theoretische Auswertung der Resultate statt. Am Ende der Befragung wurde anhand der bereinigten Daten die empirischen Hypothesen (siehe Kap. \titleref{sec:EmpirischeHypothesen}) geprüft und die Beantwortung der Fragestellung vorgenommen.
 
 Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 2017 bis zur Fertigstellung der Masterarbeit Ende Frühlingssemster 2018 zwei Semester und wurde Ende July 2018 zur Bewertung eingereicht.
 
@@ -17,11 +16,11 @@ Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Stud
 
 Begründung des Designs anhand \citeA{sedlmeier2008} S. 84ff.
 
-\subsubsection{Soziodemografische Daten}
-\subsubsection{Medien und Mediennutzung}
-\subsubsection{Bindung: Adult Attachment Scale (AAS)}
-\subsubsection{Stress: Perceived Stress Questionnaire (PSQ)}
-\subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}
+\subsubsection{Soziodemografische Daten}\label{sec:SoziodemografischeDaten}
+\subsubsection{Medien und Mediennutzung}\label{sec:MedienMediennutzung}
+\subsubsection{Bindung: Adult Attachment Scale (AAS)}\label{sec:AAS}
+\subsubsection{Stress: Perceived Stress Questionnaire (PSQ)}\label{sec:PSQ}
+\subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
 
 
 \subsection{Datenerhebung}
